- Using openjdk jre 1.8 as base image - Upgrading kafka to 0.11.0.1 - Adding JVM options to both Kafka and zookeeper to follow docker memmory limits